<resources>
    <string name="app_name">LOSR Dating App</string>
    <string name="profile_navigation_button">Profile</string>
    <string name="login_button">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="register_here_button">Register Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="losr_logo">LOSR Logo</string>
    <string name="found">LOSR Found!</string>
    <string name="todo">TODO</string>
    <string name="title_activity_navigation_page">NavigationPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="message">Message</string>
    <string name="view_match_profile">View match profile</string>
    <string name="title_activity_matched_profile">MatchedProfileActivity</string>
</resources>